// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures compiled > __fixtures__/defineEmits/basic.vue 1`] = `
"// basic.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "basic",
	emits: [
		"foo",
		"baz",
		"qux",
		"quote\\""
	],
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures compiled > __fixtures__/defineEmits/core#9541.vue 1`] = `
"// core_9541.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "core#9541",
	emits: ["unChange", "change"],
	setup(__props, { expose: __expose, emit: __emit }) {
		__expose();
		const emit = __emit;
		emit("change", 1);
		const __returned__ = { emit };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var core_9541 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { core_9541 as default };
"
`;

exports[`fixtures compiled > __fixtures__/defineEmits/shorthand.vue 1`] = `
"// shorthand.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "shorthand",
	emits: [
		"foo",
		"bar",
		"quotes\\""
	],
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var shorthand = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { shorthand as default };
"
`;

exports[`fixtures compiled > __fixtures__/defineProps/basic.vue 1`] = `
"// basic.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "basic",
	props: {
		string: {
			type: String,
			required: true
		},
		optionalString: {
			type: String,
			required: false
		},
		stringUnion: {
			type: String,
			required: true
		},
		genericExtendsString: {
			type: String,
			required: true
		},
		array: {
			type: Array,
			required: true
		},
		genericArray: {
			type: Array,
			required: true
		},
		genericCondition: {
			type: [String, Number],
			required: true
		},
		function: {
			type: Function,
			required: true
		},
		error: {
			type: Object,
			required: true
		},
		null: { required: true },
		emptyInterface: {
			type: Object,
			required: true
		},
		conditionalNumber: {
			type: Number,
			required: true
		},
		interface: {
			type: Object,
			required: true
		},
		typeLiteral: {
			type: Object,
			required: true
		},
		"1-1": {
			type: String,
			required: true
		},
		"1-2": {
			type: String,
			required: true
		},
		"2-1": {
			type: String,
			required: false
		},
		"2-2": {
			type: String,
			required: false
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures compiled > __fixtures__/defineProps/core#8286.vue 1`] = `
"// core_8286.js
import { defineComponent, ButtonHTMLAttributes } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "core#8286",
	props: {
		autofocus: {
			type: [Boolean, String],
			required: false
		},
		disabled: {
			type: [Boolean, String],
			required: false
		},
		form: {
			type: String,
			required: false
		},
		formaction: {
			type: String,
			required: false
		},
		formenctype: {
			type: String,
			required: false
		},
		formmethod: {
			type: String,
			required: false
		},
		formnovalidate: {
			type: [Boolean, String],
			required: false
		},
		formtarget: {
			type: String,
			required: false
		},
		name: {
			type: String,
			required: false
		},
		type: {
			type: String,
			required: false
		},
		value: { required: false },
		innerHTML: {
			type: String,
			required: false
		},
		class: { required: true },
		style: {
			type: [String, Boolean],
			skipCheck: true,
			required: false
		},
		accesskey: {
			type: String,
			required: false
		},
		contenteditable: {
			type: [Boolean, String],
			required: false
		},
		contextmenu: {
			type: String,
			required: false
		},
		dir: {
			type: String,
			required: false
		},
		draggable: {
			type: [Boolean, String],
			required: false
		},
		hidden: {
			type: [Boolean, String],
			required: false
		},
		id: {
			type: String,
			required: false
		},
		inert: {
			type: [Boolean, String],
			required: false
		},
		lang: {
			type: String,
			required: false
		},
		placeholder: {
			type: String,
			required: false
		},
		spellcheck: {
			type: [Boolean, String],
			required: false
		},
		tabindex: {
			type: [String, Number],
			required: false
		},
		title: {
			type: String,
			required: false
		},
		translate: {
			type: String,
			required: false
		},
		radiogroup: {
			type: String,
			required: false
		},
		role: {
			type: String,
			required: false
		},
		about: {
			type: String,
			required: false
		},
		datatype: {
			type: String,
			required: false
		},
		inlist: { required: true },
		prefix: {
			type: String,
			required: false
		},
		property: {
			type: String,
			required: false
		},
		resource: {
			type: String,
			required: false
		},
		typeof: {
			type: String,
			required: false
		},
		vocab: {
			type: String,
			required: false
		},
		autocapitalize: {
			type: String,
			required: false
		},
		autocorrect: {
			type: String,
			required: false
		},
		autosave: {
			type: String,
			required: false
		},
		color: {
			type: String,
			required: false
		},
		itemprop: {
			type: String,
			required: false
		},
		itemscope: {
			type: [Boolean, String],
			required: false
		},
		itemtype: {
			type: String,
			required: false
		},
		itemid: {
			type: String,
			required: false
		},
		itemref: {
			type: String,
			required: false
		},
		results: {
			type: [String, Number],
			required: false
		},
		security: {
			type: String,
			required: false
		},
		unselectable: {
			type: String,
			required: false
		},
		inputmode: {
			type: String,
			required: false
		},
		is: {
			type: String,
			required: false
		},
		"aria-activedescendant": {
			type: String,
			required: false
		},
		"aria-atomic": {
			type: [Boolean, String],
			required: false
		},
		"aria-autocomplete": {
			type: String,
			required: false
		},
		"aria-busy": {
			type: [Boolean, String],
			required: false
		},
		"aria-checked": {
			type: [Boolean, String],
			required: false
		},
		"aria-colcount": {
			type: [String, Number],
			required: false
		},
		"aria-colindex": {
			type: [String, Number],
			required: false
		},
		"aria-colspan": {
			type: [String, Number],
			required: false
		},
		"aria-controls": {
			type: String,
			required: false
		},
		"aria-current": {
			type: [Boolean, String],
			required: false
		},
		"aria-describedby": {
			type: String,
			required: false
		},
		"aria-details": {
			type: String,
			required: false
		},
		"aria-disabled": {
			type: [Boolean, String],
			required: false
		},
		"aria-dropeffect": {
			type: String,
			required: false
		},
		"aria-errormessage": {
			type: String,
			required: false
		},
		"aria-expanded": {
			type: [Boolean, String],
			required: false
		},
		"aria-flowto": {
			type: String,
			required: false
		},
		"aria-grabbed": {
			type: [Boolean, String],
			required: false
		},
		"aria-haspopup": {
			type: [Boolean, String],
			required: false
		},
		"aria-hidden": {
			type: [Boolean, String],
			required: false
		},
		"aria-invalid": {
			type: [Boolean, String],
			required: false
		},
		"aria-keyshortcuts": {
			type: String,
			required: false
		},
		"aria-label": {
			type: String,
			required: false
		},
		"aria-labelledby": {
			type: String,
			required: false
		},
		"aria-level": {
			type: [String, Number],
			required: false
		},
		"aria-live": {
			type: String,
			required: false
		},
		"aria-modal": {
			type: [Boolean, String],
			required: false
		},
		"aria-multiline": {
			type: [Boolean, String],
			required: false
		},
		"aria-multiselectable": {
			type: [Boolean, String],
			required: false
		},
		"aria-orientation": {
			type: String,
			required: false
		},
		"aria-owns": {
			type: String,
			required: false
		},
		"aria-placeholder": {
			type: String,
			required: false
		},
		"aria-posinset": {
			type: [String, Number],
			required: false
		},
		"aria-pressed": {
			type: [Boolean, String],
			required: false
		},
		"aria-readonly": {
			type: [Boolean, String],
			required: false
		},
		"aria-relevant": {
			type: String,
			required: false
		},
		"aria-required": {
			type: [Boolean, String],
			required: false
		},
		"aria-roledescription": {
			type: String,
			required: false
		},
		"aria-rowcount": {
			type: [String, Number],
			required: false
		},
		"aria-rowindex": {
			type: [String, Number],
			required: false
		},
		"aria-rowspan": {
			type: [String, Number],
			required: false
		},
		"aria-selected": {
			type: [Boolean, String],
			required: false
		},
		"aria-setsize": {
			type: [String, Number],
			required: false
		},
		"aria-sort": {
			type: String,
			required: false
		},
		"aria-valuemax": {
			type: [String, Number],
			required: false
		},
		"aria-valuemin": {
			type: [String, Number],
			required: false
		},
		"aria-valuenow": {
			type: [String, Number],
			required: false
		},
		"aria-valuetext": {
			type: String,
			required: false
		},
		onCopy: { required: true },
		onCut: { required: true },
		onPaste: { required: true },
		onCompositionend: { required: true },
		onCompositionstart: { required: true },
		onCompositionupdate: { required: true },
		onDrag: { required: true },
		onDragend: { required: true },
		onDragenter: { required: true },
		onDragexit: { required: true },
		onDragleave: { required: true },
		onDragover: { required: true },
		onDragstart: { required: true },
		onDrop: { required: true },
		onFocus: { required: true },
		onFocusin: { required: true },
		onFocusout: { required: true },
		onBlur: { required: true },
		onChange: { required: true },
		onBeforeinput: { required: true },
		onInput: { required: true },
		onReset: { required: true },
		onSubmit: { required: true },
		onInvalid: { required: true },
		onLoad: { required: true },
		onError: { required: true },
		onKeydown: { required: true },
		onKeypress: { required: true },
		onKeyup: { required: true },
		onAuxclick: { required: true },
		onClick: { required: true },
		onContextmenu: { required: true },
		onDblclick: { required: true },
		onMousedown: { required: true },
		onMouseenter: { required: true },
		onMouseleave: { required: true },
		onMousemove: { required: true },
		onMouseout: { required: true },
		onMouseover: { required: true },
		onMouseup: { required: true },
		onAbort: { required: true },
		onCanplay: { required: true },
		onCanplaythrough: { required: true },
		onDurationchange: { required: true },
		onEmptied: { required: true },
		onEncrypted: { required: true },
		onEnded: { required: true },
		onLoadeddata: { required: true },
		onLoadedmetadata: { required: true },
		onLoadstart: { required: true },
		onPause: { required: true },
		onPlay: { required: true },
		onPlaying: { required: true },
		onProgress: { required: true },
		onRatechange: { required: true },
		onSeeked: { required: true },
		onSeeking: { required: true },
		onStalled: { required: true },
		onSuspend: { required: true },
		onTimeupdate: { required: true },
		onVolumechange: { required: true },
		onWaiting: { required: true },
		onSelect: { required: true },
		onScroll: { required: true },
		onScrollend: { required: true },
		onTouchcancel: { required: true },
		onTouchend: { required: true },
		onTouchmove: { required: true },
		onTouchstart: { required: true },
		onPointerdown: { required: true },
		onPointermove: { required: true },
		onPointerup: { required: true },
		onPointercancel: { required: true },
		onPointerenter: { required: true },
		onPointerleave: { required: true },
		onPointerover: { required: true },
		onPointerout: { required: true },
		onWheel: { required: true },
		onAnimationstart: { required: true },
		onAnimationend: { required: true },
		onAnimationiteration: { required: true },
		onTransitionend: { required: true },
		onTransitionstart: { required: true }
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = { ButtonHTMLAttributes };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var core_8286 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { core_8286 as default };
"
`;

exports[`fixtures compiled > __fixtures__/defineProps/core#8468.vue 1`] = `
"// core_8468.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "core#8468",
	props: {
		type: {
			type: String,
			required: true
		},
		value: {
			type: [String, Number],
			required: true
		}
	},
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var core_8468 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { core_8468 as default };
"
`;

exports[`fixtures compiled > __fixtures__/defineProps/core#9774.vue 1`] = `
"// core_9774.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "core#9774",
	props: { a: {
		type: String,
		required: false
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const testProps = { a: { type: String } };
		const __returned__ = { testProps };
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var core_9774 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { core_9774 as default };
"
`;

exports[`fixtures compiled > __fixtures__/defineProps/import-from-vue.vue 1`] = `
"// import-from-vue.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "import-from-vue",
	props: { foo: {
		type: String,
		required: true
	} },
	setup(__props, { expose: __expose }) {
		__expose();
		const __returned__ = {};
		Object.defineProperty(__returned__, "__isScriptSetup", {
			enumerable: false,
			value: true
		});
		return __returned__;
	}
});

var importFromVue = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { importFromVue as default };
"
`;
